[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tiles/TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://src/UserInterface/TouchControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/shop/Shop.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Levels/TestLevelAron.gd" type="Script" id=5]
[ext_resource path="res://src/UserInterface/ShoppingList.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Background/ParallaxBackground.tscn" type="PackedScene" id=8]

[node name="TestLevelAron" type="Node2D"]
position = Vector2( -1, -1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 1088.0, 1088.0 ],
"_edit_vertical_guides_": [ 1920.0 ]
}
starting_cash = 3000

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="InterfaceLayer" instance=ExtResource( 3 )]
margin_left = -8.0
margin_right = -8.0

[node name="ShoppingList" parent="InterfaceLayer" instance=ExtResource( 6 )]
margin_left = 1351.47
margin_top = 768.233
margin_right = 1351.47
margin_bottom = 768.233

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 7 )]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -130943, 1, 0, -130942, 1, 0, -130941, 1, 0, -130940, 1, 0, -65409, 1, 0, -65408, 1, 0, -65407, 1, 0, 126, 1, 0, 127, 1, 0, 65536, 1, 0, 65661, 1, 0, 65662, 1, 0, 131072, 1, 0, 131196, 1, 0, 196608, 1, 0, 196697, 0, 7, 196698, 0, 262149, 196699, 0, 2, 196700, 0, 2, 196701, 0, 2, 196702, 0, 2, 196703, 0, 2, 196704, 0, 2, 196705, 0, 2, 196706, 0, 5, 196731, 1, 0, 262144, 1, 0, 262233, 0, 327682, 262234, 0, 65544, 262243, 0, 65542, 262244, 0, 2, 262245, 0, 1, 262266, 1, 0, 262267, 1, 0, 327680, 1, 0, 327767, 0, 7, 327768, 0, 196612, 327769, 0, 262147, 327781, 0, 65536, 327782, 0, 2, 327783, 0, 2, 327784, 0, 1, 327802, 1, 0, 393216, 1, 0, 393293, 0, 0, 393294, 0, 2, 393295, 0, 2, 393296, 0, 2, 393297, 0, 2, 393298, 0, 2, 393299, 0, 2, 393300, 0, 2, 393301, 0, 2, 393302, 0, 2, 393303, 0, 327684, 393304, 0, 196613, 393305, 0, 65544, 393320, 0, 65536, 393321, 0, 2, 393322, 0, 2, 393323, 0, 5, 393338, 1, 0, 524286, 0, 7, 524287, 0, 196612, 458752, 0, 8, 458828, 0, 0, 458829, 0, 65537, 458860, 0, 65542, 458861, 0, 2, 458862, 0, 5, 458872, 1, 0, 458873, 1, 0, 589822, 0, 131076, 589823, 0, 131078, 524288, 0, 131077, 524364, 0, 65538, 524399, 0, 65542, 524400, 0, 2, 524401, 0, 2, 524402, 0, 5, 524407, 1, 0, 655358, 0, 131076, 655359, 0, 131078, 589824, 0, 131077, 589899, 0, 0, 589900, 0, 65537, 589939, 0, 65542, 589940, 0, 2, 589941, 0, 2, 589942, 0, 2, 589943, 0, 2, 589944, 0, 2, 589945, 0, 2, 589946, 0, 2, 589947, 0, 2, 589948, 0, 2, 589949, 0, 2, 589950, 0, 2, 589951, 0, 2, 589952, 0, 5, 720894, 0, 131076, 720895, 0, 131078, 655360, 0, 131077, 655434, 0, 0, 655435, 0, 65537, 655475, 1, 0, 655476, 1, 0, 655489, 0, 65542, 655490, 0, 2, 655491, 0, 2, 655492, 0, 5, 786430, 0, 131076, 786431, 0, 131078, 720896, 0, 131077, 720903, 0, 65542, 720904, 0, 2, 720905, 0, 5, 720970, 0, 6, 721007, 1, 0, 721008, 1, 0, 721009, 1, 0, 721010, 1, 0, 851966, 0, 131076, 851967, 0, 131078, 786432, 0, 131077, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786460, 1, 0, 786461, 1, 0, 786462, 1, 0, 786471, 1, 0, 786472, 1, 0, 786504, 0, 0, 786505, 0, 5, 786542, 1, 0, 786543, 1, 0, 917502, 0, 131076, 917503, 0, 131078, 851968, 0, 131077, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 852005, 1, 0, 852006, 1, 0, 852007, 1, 0, 852040, 0, 6, 852078, 1, 0, 983038, 0, 131076, 983039, 0, 131078, 917504, 0, 131077, 917508, 0, 65542, 917509, 0, 2, 917510, 0, 5, 917575, 0, 196614, 917612, 1, 0, 917613, 1, 0, 1048574, 0, 131076, 1048575, 0, 131078, 983040, 0, 196608, 983041, 0, 8, 983110, 0, 65541, 983123, 1, 0, 983124, 1, 0, 983125, 1, 0, 983126, 1, 0, 983127, 1, 0, 983128, 1, 0, 983129, 1, 0, 983146, 1, 0, 983147, 1, 0, 983148, 1, 0, 1114110, 0, 131076, 1114111, 0, 131078, 1048576, 0, 131078, 1048577, 0, 196608, 1048578, 0, 196612, 1048579, 0, 196612, 1048580, 0, 196612, 1048581, 0, 196612, 1048582, 0, 196612, 1048583, 0, 196612, 1048584, 0, 196612, 1048585, 0, 196612, 1048586, 0, 196612, 1048587, 0, 196612, 1048588, 0, 196612, 1048589, 0, 196612, 1048590, 0, 196612, 1048591, 0, 196612, 1048592, 0, 196612, 1048593, 0, 196612, 1048594, 0, 196612, 1048595, 0, 196612, 1048596, 0, 196612, 1048597, 0, 196612, 1048598, 0, 196612, 1048599, 0, 196612, 1048600, 0, 196612, 1048601, 0, 196612, 1048602, 0, 196612, 1048603, 0, 196612, 1048604, 0, 196612, 1048605, 0, 196612, 1048606, 0, 196612, 1048607, 0, 196612, 1048608, 0, 196612, 1048609, 0, 196612, 1048610, 0, 196612, 1048611, 0, 196612, 1048612, 0, 196612, 1048613, 0, 196612, 1048614, 0, 196612, 1048615, 0, 196612, 1048616, 0, 196612, 1048617, 0, 196612, 1048618, 0, 196612, 1048619, 0, 196612, 1048620, 0, 196612, 1048621, 0, 196612, 1048622, 0, 196612, 1048623, 0, 196612, 1048624, 0, 8, 1048625, 1, 0, 1048626, 1, 0, 1048627, 1, 0, 1048628, 1, 0, 1048629, 1, 0, 1048630, 1, 0, 1048631, 1, 0, 1048632, 1, 0, 1048633, 1, 0, 1048634, 1, 0, 1048635, 1, 0, 1048636, 1, 0, 1048637, 1, 0, 1048638, 1, 0, 1048639, 1, 0, 1048640, 1, 0, 1048641, 1, 0, 1048642, 1, 0, 1048643, 1, 0, 1048644, 1, 0, 1048645, 0, 65542, 1048646, 0, 65537, 1048647, 1, 0, 1048648, 1, 0, 1048649, 1, 0, 1048650, 1, 0, 1048651, 1, 0, 1048652, 1, 0, 1048653, 1, 0, 1048654, 1, 0, 1048655, 1, 0, 1048656, 1, 0, 1048657, 1, 0, 1048658, 1, 0, 1048665, 1, 0, 1048666, 1, 0, 1048667, 1, 0, 1048668, 1, 0, 1048669, 1, 0, 1048670, 1, 0, 1048671, 1, 0, 1048672, 1, 0, 1048673, 1, 0, 1048674, 1, 0, 1048675, 1, 0, 1048676, 1, 0, 1048677, 1, 0, 1048678, 1, 0, 1048679, 1, 0, 1048680, 1, 0, 1048681, 1, 0, 1048682, 1, 0, 1048683, 1, 0, 1048684, 1, 0, 1048685, 1, 0, 1048686, 1, 0, 1048687, 1, 0, 1048688, 1, 0, 1048689, 1, 0, 1048690, 1, 0, 1048691, 1, 0, 1048692, 1, 0, 1048693, 1, 0, 1048694, 1, 0, 1048695, 1, 0, 1048696, 1, 0, 1048697, 1, 0, 1048698, 1, 0, 1048699, 1, 0, 1048700, 1, 0, 1048701, 1, 0, 1048702, 1, 0, 1048703, 1, 0, 1048704, 1, 0, 1048705, 1, 0, 1179646, 0, 131076, 1179647, 0, 131078, 1114112, 0, 131078, 1114113, 0, 131078, 1114114, 0, 131078, 1114115, 0, 131078, 1114116, 0, 131078, 1114117, 0, 131078, 1114118, 0, 131078, 1114119, 0, 131078, 1114120, 0, 131078, 1114121, 0, 131078, 1114122, 0, 131078, 1114123, 0, 131078, 1114124, 0, 131078, 1114125, 0, 131078, 1114126, 0, 131078, 1114127, 0, 131078, 1114128, 0, 131078, 1114129, 0, 131078, 1114130, 0, 131078, 1114131, 0, 131078, 1114132, 0, 131078, 1114133, 0, 131078, 1114134, 0, 131072, 1114135, 0, 196613, 1114136, 0, 196613, 1114137, 0, 196613, 1114138, 0, 196613, 1114139, 0, 196613, 1114140, 0, 196613, 1114141, 0, 196613, 1114142, 0, 196613, 1114143, 0, 196613, 1114144, 0, 196613, 1114145, 0, 196613, 1114146, 0, 196613, 1114147, 0, 196613, 1114148, 0, 196613, 1114149, 0, 196613, 1114150, 0, 196613, 1114151, 0, 196613, 1114152, 0, 196613, 1114153, 0, 196613, 1114154, 0, 196613, 1114155, 0, 196613, 1114156, 0, 196613, 1114157, 0, 196613, 1114158, 0, 196613, 1114159, 0, 196613, 1114160, 0, 262150, 1114161, 0, 196612, 1114162, 0, 196612, 1114163, 0, 8, 1114179, 0, 0, 1114180, 0, 5, 1114241, 1, 0, 1114242, 1, 0, 1114243, 1, 0, 1114244, 1, 0, 1114245, 1, 0, 1114246, 1, 0, 1114247, 1, 0, 1245182, 0, 65543, 1245183, 0, 196613, 1179648, 0, 196613, 1179649, 0, 196613, 1179650, 0, 196613, 1179651, 0, 196613, 1179652, 0, 196613, 1179653, 0, 196613, 1179654, 0, 196613, 1179655, 0, 196613, 1179656, 0, 196613, 1179657, 0, 196613, 1179658, 0, 196613, 1179659, 0, 196613, 1179660, 0, 196613, 1179661, 0, 196613, 1179662, 0, 196613, 1179663, 0, 196613, 1179664, 0, 196613, 1179665, 0, 196613, 1179666, 0, 196613, 1179667, 0, 196613, 1179668, 0, 196613, 1179669, 0, 196613, 1179670, 0, 65544, 1179696, 0, 65543, 1179697, 0, 131073, 1179698, 0, 131078, 1179699, 0, 196608, 1179700, 0, 196612, 1179701, 0, 8, 1179713, 0, 0, 1179714, 0, 2, 1179715, 0, 65537, 1245233, 0, 65543, 1245234, 0, 131073, 1245235, 0, 131078, 1245236, 0, 131078, 1245237, 0, 196608, 1245238, 0, 196612, 1245239, 0, 196612, 1245240, 0, 8, 1245246, 0, 0, 1245247, 0, 2, 1245248, 0, 2, 1245249, 0, 65537, 1310770, 0, 65543, 1310771, 0, 196613, 1310772, 0, 196613, 1310773, 0, 131073, 1310774, 0, 131078, 1310775, 0, 131078, 1310776, 0, 196608, 1310777, 0, 262149, 1310778, 0, 2, 1310779, 0, 2, 1310780, 0, 2, 1310781, 0, 2, 1310782, 0, 65537, 1376309, 0, 65543, 1376310, 0, 196613, 1376311, 0, 131074, 1376312, 0, 196613, 1376313, 0, 65544, 1441847, 0, 6, 1572937, 0, 65542, 1572938, 0, 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 576, 960 )
collision_mask = 18
speed = Vector2( 800, 1800 )
gravity = 6000.0

[node name="ParallaxBackground" parent="." instance=ExtResource( 8 )]

[node name="Shop" parent="." instance=ExtResource( 4 )]
position = Vector2( 1352.47, 777.828 )
z_index = -5
collision_layer = 8
collision_mask = 0

[node name="Shop2" parent="." instance=ExtResource( 4 )]
position = Vector2( 2400.16, 777.828 )
z_index = -5
collision_layer = 8
collision_mask = 0
list = [ [ "Egg", 150 ], [ "Milk", 200 ], [ "Flour", 500 ] ]
[connection signal="Done" from="InterfaceLayer/ShoppingList" to="." method="_on_ShoppingList_Done"]
[connection signal="Bought" from="Shop" to="." method="_on_Shop_Bought"]
[connection signal="ShopUI" from="Shop" to="." method="_on_Shop_ShopUI"]
[connection signal="Bought" from="Shop2" to="." method="_on_Shop_Bought"]
[connection signal="ShopUI" from="Shop2" to="." method="_on_Shop_ShopUI"]
